Small cleanup + Woops